@startuml proposal-life-cycle
title Proposal Life Cycle

skinparam shadowing false
skinparam state {
  BackgroundColor #F8FAFC
  BorderColor #334155
  FontColor #111827
}
skinparam note {
  BackgroundColor #FFFBEB
  BorderColor #B45309
}

[*] --> Submitted : submit proposal\nAUTHENTICATED or PUBLIC materialization

state "SUBMITTED" as Submitted
state "PENDING" as Pending
state "APPROVED" as Approved
state "REJECTED" as Rejected
state "CANCELLED" as Cancelled

Submitted --> Submitted : add/remove requested objects\nedit details
Submitted --> Pending : assign()\nProposalEvent.ASSIGNED

Pending --> Pending

Pending --> Approved : approve()\nProposalEvent.APPROVED
Pending --> Rejected : reject()\nProposalEvent.REJECTED

Submitted --> Cancelled : cancel()
Pending --> Cancelled : cancel()
Approved --> Cancelled : cancel approved proposal\nand coordinate project cancellation

Approved --> [*] : project exists or is created
Rejected --> [*]
Cancelled --> [*]





@enduml
